--- a/web/css/login.css
+++ b/web/css/login.css
@@ -1,14 +1,29 @@
-#CuadradoLogin
-{
-    background-color: red;
-    width: 30%;
-    height: 100px;
-    padding: 6%;
-    margin-left: 30%;
-    text-align: center;
-    margin-top: 15%;
+body {
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
 }
-#FormularioLogin
-{
-    text-align:initial;
+
+#CuadradoLogin {
+    background-color: #2B75AE;
+    padding: 6%;
+    text-align: center;
+    border-radius: 15px 50px;
+}
+
+#FormularioLogin {
+    text-align: initial;
+}
+
+#Enviar {
+    margin-top: 4%;
+    margin-left: 35%;
+}
+
+.field-icon {
+    float: right;
+    margin-left: -25px;
+    margin-top: 3%;
+    position: relative;
+    z-index: 2;
 }
