--- a/web/css/editarDatos.css
+++ b/web/css/editarDatos.css
@@ -26,3 +26,23 @@ margin-top: 3%;
 {
 margin-top: 3%;
 }
+
+.close
+{
+  color: #cdcdcd;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  margin-top: 1%;
+  margin-left: 87%;
+  position: absolute;
+  
+}
+
+.close:hover,
+.close:focus
+{
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
