--- a/web/css/buscadorPreguntas.css
+++ b/web/css/buscadorPreguntas.css
@@ -9,3 +9,16 @@
     text-align: center;
     margin:auto;
 }
+
+#tablaPreguntas th
+{
+color: #2D143F;
+}
+
+#tablaPreguntas td
+{
+    border-color: #364278;
+border-width: 1px;
+background: #364278;
+padding: 5px;
+}
