--- a/web/css/login.css
+++ b/web/css/login.css
@@ -25,7 +25,7 @@ body {
 .eye {
   float: right;
   margin-left: -25px;
-  margin-top: 10%;
+  margin-top: 6%;
   position: relative;
   z-index: 2;
 }
@@ -37,6 +37,7 @@ body {
 /*TITULO IMG*/
 #titulo {
   justify-content: center;
+  display: flex;
 }
 
 /*----------------------------------INPUTS----------------------------------*/
