--- a/web/css/comun.css
+++ b/web/css/comun.css
@@ -6,6 +6,27 @@
   height: 20%;
 
 }
+input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  width: auto;
+}
+input[type="button"] {
+  width: 100%;
+  background-color: #06aadb;
+  color: white;
+  padding: 14px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 4%;
+}
+
 
 #titulo img
 {
