--- a/web/css/login.css
+++ b/web/css/login.css
@@ -50,7 +50,7 @@ input {
   border-radius: 20px;
   box-sizing: border-box;
 }
-input[type="submit"] {
+#Enviar {
   width: 100%;
   background-color: #06aadb;
   color: white;
