--- a/web/css/comun.css
+++ b/web/css/comun.css
@@ -162,6 +162,9 @@ body {
     font-size: 22px;
 }
 
+#menuHamburguesa #liUser{
+    color: #ff6000;
+}
 
 /*
   * And let's slide it in from the left
