--- a/web/css/buscadorPreguntas.css
+++ b/web/css/buscadorPreguntas.css
@@ -8,18 +8,30 @@
     margin: auto;
 }
 
-#tablaPreguntas th {
-    color: #2D143F;
+#tablaPreguntas {
+    color: #2d3764;
 }
 
 #tablaPreguntas td {
-    border-color: #364278;
-    border-width: 1px;
     background: #364278;
     padding: 5px;
+    color: white;
+    border-radius: 5px;
 }
 
 #introFiltro {
-    background-color: #364278;
     font-size: 108%;
+}
+
+#tablaPreguntas .button {
+    background: #2d3764;
+    color: white;
+}
+
+#elementosFiltro {
+    background-color: #364278;
+    width: 50%;
+    border-radius: 20px;
+    color: white;
+    margin-left: 24%
 }
