--- a/web/css/SUcomun.css
+++ b/web/css/SUcomun.css
@@ -18,7 +18,7 @@ input {
 
 input[type="button"] {
     width: 100%;
-    background-color: #592100;
+    background-color: #973606;
     color: white;
     padding: 14px 20px;
     border: none;
@@ -36,10 +36,29 @@ body {
     padding: 0;
     height: 900px;
     margin-top: 6%;
-    /* make it look decent enough */
-    background: #EEAA81;
+    background: #EEA463;
     color: #cdcdcd;
     font-family: "Avenir Next", "Avenir", sans-serif;
+}
+
+#menu {
+    position: absolute;
+    width: 300px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+    height: 2000px;
+    background: #364278;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+}
+
+#menu li {
+    padding: 10px 0;
+    font-size: 22px;
 }
 
 #menuHamburguesa {
@@ -72,16 +91,9 @@ body {
     background: #2B75AE;
     cursor: pointer;
     opacity: 0;
-    /* hide this */
     z-index: 2;
-    /* and place it over the hamburger */
     -webkit-touch-callout: none;
 }
-
-
-/*
-  * Just a quick hamburger
-  */
 
 #menuHamburguesa span {
     display: block;
@@ -104,78 +116,26 @@ body {
     transform-origin: 0% 100%;
 }
 
-
-/* 
-  * Transform all the slices of hamburger
-  * into a crossmark.
-  */
-
 #menuHamburguesa input:checked~span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
     background: #2B75AE;
 }
 
-
-/*
-  * But let's hide the middle one.
-  */
-
 #menuHamburguesa input:checked~span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-
-/*
-  * Ohyeah and the last one should go the other direction
-  */
-
 #menuHamburguesa input:checked~span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
 }
-
-
-/*
-  * Make this absolute positioned
-  * at the top left of the screen
-  */
-
-#menu {
-    position: absolute;
-    width: 300px;
-    margin: -100px 0 0 -50px;
-    padding: 50px;
-    padding-top: 125px;
-    height: 2000px;
-    background: #364278;
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
-    transform-origin: 0% 0%;
-    transform: translate(-100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-}
-
-#menu li {
-    padding: 10px 0;
-    font-size: 22px;
-}
-
-#menuHamburguesa #liSuperUser {
-    color: #ff6000;
-}
-
-
-/*
-  * And let's slide it in from the left
-  */
 
 #menuHamburguesa input:checked~ul {
     position: fixed;
     transform: none;
 }
 
-p {
-    color: #361a31;
+#menuHamburguesa #liSuperUser {
+    color: #c85e2a;
 }
