--- a/web/css/SUpanel.css
+++ b/web/css/SUpanel.css
@@ -132,18 +132,33 @@ select {
 .imagenPanel {
     height: 2rem;
 }
+
+
 /*IMAGEN ROTACION*/
+
 .imageRot {
-    -webkit-animation:spin 0.6s ease-in-out;
-     -moz-animation:spin 0.6s ease-in-out;
-     animation:spin 0.6s ease-in-out;
- }
- @-moz-keyframes spin {
-     100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }
- }
- @-webkit-keyframes spin {
-     100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }
- }
- @keyframes spin { 
-     100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } 
- }
+    -webkit-animation: spin 0.6s ease-in-out;
+    -moz-animation: spin 0.6s ease-in-out;
+    animation: spin 0.6s ease-in-out;
+}
+
+@-moz-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
