--- a/web/css/SUcomun.css
+++ b/web/css/SUcomun.css
@@ -46,17 +46,19 @@ body {
 
 #menu {
     position: absolute;
-    width: 300px;
+    width: auto;
     margin: -100px 0 0 -50px;
     padding: 50px;
     padding-top: 125px;
-    height: 2000px;
+    height: 100vh;
     background: #364278;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    display:grid;
+
 }
 
 #menu li {
