--- a/web/css/login.css
+++ b/web/css/login.css
@@ -1,78 +1,139 @@
 /*----------------------------------FONDOS----------------------------------*/
+
 body {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  margin-top: 5%;
-  margin-left: 35%;
-  margin-right: 35%;
-  background-color: #06aadb;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    margin-top: 5%;
+    margin-left: 35%;
+    margin-right: 35%;
+    background-color: #06aadb;
 }
+
 #CuadradoLogin {
-  background-color: #364278;
-  margin-top: 15%;
-  padding: 8%;
-  text-align: center;
-  border-radius: 15px 50px;
-  padding-top: 2.5%;
-  padding-bottom: 3.5%;
+    background-color: #364278;
+    margin-top: 15%;
+    padding: 8%;
+    text-align: center;
+    border-radius: 15px 50px;
+    padding-top: 2.5%;
+    padding-bottom: 3.5%;
 }
+
 #FormularioLogin {
-  text-align: initial;
+    text-align: initial;
 }
-*{
-  font-family: "Lora", serif;
-  font-weight: bold;
+
+* {
+    font-family: "Lora", serif;
+    font-weight: bold;
 }
+
+
 /*----------------------------------OBJETOS----------------------------------*/
+
+
 /*IMAGEN OJO*/
+
 .eye {
-  float: right;
-  margin-left: -25px;
-  margin-top: 6%;
-  position: relative;
-  z-index: 2;
+    float: right;
+    margin-left: -25px;
+    margin-top: 6%;
+    position: relative;
+    z-index: 2;
 }
+
+
 /*LABELS*/
+
 #FormularioLogin label {
-  color: white;
-  font-weight: bold;
-  font-size: 150%;
+    color: white;
+    font-weight: bold;
+    font-size: 150%;
 }
+
+
 /*TITULO IMG*/
+
 #titulo {
-  justify-content: center;
-  display: flex;
+    justify-content: center;
+    display: flex;
 }
+
+@media only screen and (min-width: 879px) {
+    #titulo {
+        height: 20%;
+    }
+}
+
+@media only screen and (max-width: 879px) and (min-width: 680px) {
+    #titulo img {
+        width: 500px;
+        height: 170px;
+    }
+    #titulo {
+        height: 15%;
+    }
+}
+
+@media only screen and (max-width: 680px) and (min-width: 575px) {
+    #titulo img {
+        width: 450px;
+        height: 120px;
+    }
+    #titulo {
+        height: 10%;
+    }
+    * {
+        font-size: 93%;
+    }
+}
+
+@media only screen and (max-width: 575px) and (min-width: 0px) {
+    #titulo img {
+        width: 350px;
+        height: 100px;
+    }
+    #titulo {
+        height: 10%;
+    }
+    * {
+        font-size: 93%;
+    }
+}
+
 
 /*----------------------------------INPUTS----------------------------------*/
+
 input {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  box-sizing: border-box;
-}
-#Enviar {
-  width: 100%;
-  background-color: #06aadb;
-  color: white;
-  padding: 14px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 4%;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    box-sizing: border-box;
 }
 
+#Enviar {
+    width: 100%;
+    background-color: #06aadb;
+    color: white;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 4%;
+}
+
+
 /*----------------------------------ERROR----------------------------------*/
-#error{
-  
-  color: white;
-  font-size: 130%;
-  background-color: #6570a2;
-  border-radius: 11px;
-  margin: 5px;
-  display: none;
+
+#error {
+    color: white;
+    font-size: 130%;
+    background-color: #6570a2;
+    border-radius: 11px;
+    margin: 5px;
+    display: none;
 }
