--- a/web/css/modal.css
+++ b/web/css/modal.css
@@ -26,7 +26,7 @@
 /* Modal Content */
 
 .modal-content {
-    background-color: #000000;
+    background-color: #2B75AE;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
