--- a/web/css/SUpanelUsuario.css
+++ b/web/css/SUpanelUsuario.css
@@ -65,3 +65,25 @@
 #camposUsuario>div p:last-child {
     flex: 3;
 }
+
+@media only screen and (max-width: 579px) and (min-width: 450px) {
+    #imageeditar {
+        width: 40%;
+        height: 40%;
+    }
+    #imageeliminar {
+        width: 40%;
+        height: 40%;
+    }
+}
+
+@media only screen and (max-width: 450px) and (min-width: 0px) {
+    #imageeditar {
+        width: 20px;
+        height: 20px;
+    }
+    #imageeliminar {
+        width: 20px;
+        height: 20px;
+    }
+}
