--- a/web/css/SUbuscadorPreguntas.css
+++ b/web/css/SUbuscadorPreguntas.css
@@ -32,3 +32,11 @@
     color: #333131;
     margin-left: 24%
 }
+
+#panelCentral {
+    background-color: #c85e2a;
+    width: 50%;
+    border-radius: 20px;
+    color: #333131;
+    margin-left: 24%
+}
