--- a/web/css/editarPreguntas.css
+++ b/web/css/editarPreguntas.css
@@ -1,6 +1,12 @@
 h1 {
     color: #f8f8f8;
-    font-family: 'Lora', serif;
+}
+
+#imagen {
+    width: 250px;
+    height: 250px;
+    border: 5px #333131 solid;
+    border-radius: 25px;
 }
 
 #panelCentral {
@@ -37,18 +43,3 @@ h1 {
 .respuesta {
     margin-top: 2%;
 }
-
-
-/*
- #panelCentral > div {
-   display: flex;
-   flex-flow: column;
-    flex: 2;
-
- }
- #panelCentral > div:last-child {
-
-   flex: 1;  
-   background-color: #2D143F;
- }
-*/
