--- a/web/css/SUpanelUsuario.css
+++ b/web/css/SUpanelUsuario.css
@@ -101,3 +101,39 @@
         height: 20px;
     }
 }
+
+@media only screen and (min-width: 650px) {
+    #panelCentral {
+        flex-flow: row;
+    }
+    #confirmarDatosUsuario {
+        margin-bottom: -0.3%;
+        margin-left: -0.3%;
+        width: 105%;
+        margin-right: -7%;
+    }
+    #editarDatosUsuario {
+        margin-bottom: -0.3%;
+        margin-left: -0.3%;
+        width: 105%;
+        margin-right: -7%;
+    }
+}
+
+@media only screen and (max-width: 650px) and (min-width: 0px) {
+    #panelCentral {
+        flex-flow: column-reverse;
+    }
+    #confirmarDatosUsuario {
+        margin-bottom: -0.3%;
+        margin-left: -0.3%;
+        width: 101%;
+        margin-right: -7%;
+    }
+    #editarDatosUsuario {
+        margin-bottom: -0.3%;
+        margin-left: -0.3%;
+        width: 101%;
+        margin-right: -7%;
+    }
+}
